--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@jst_htet/file-picker": "^1.0.8",
+    "axios": "^0.27.2",
+    "mm-money": "^1.2.2",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-loading": "^2.0.3",
+    "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
