--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@jst_htet/file-picker": "^1.0.8",
     "axios": "^0.27.2",
+    "daisyui": "^2.17.0",
     "mm-money": "^1.2.2",
     "moment": "^2.29.3",
     "next": "12.1.6",
