--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-loading": "^2.0.3",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.17"
   },
   "devDependencies": {
